# rescript-lake

./: .gitignore  .merlin  bsconfig.json  index.html  package.json  vite.config.js
lake/: .gitignore  Cargo.toml  LICENSE_MIT
lake/src/: lib.rs
src/: App.bs.js  App.res  Display.bs.js  Display.res  main.bs.js  main.res
src/bindings/: Audio.res  Lake.bs.js  Lake.res
